app/styles/app.scss
/* Style bundeled with power-select package
   Needs to be sourced before "main" to avoid collisions (breaking "dissmiss selection" cross for example)
 */
@import "ember-power-select";

// $font-location: "/fonts/"; // Uncomment to load fonts from own sources

// Main style repo
@import "main";

/* Unofficial code
   ========================================================================== */

@import 'custom-application/power-select';
@import 'custom-application/file-uploader';

// Change non-interactive icons from blue to grey
.vlc-document-card-item__icon {
  color: #666;
}

// Make custom pill clickable (for access-level select)
// TODO: Color-wise hinting that it is editable
.vlc-pill--clickable {
  cursor: pointer;
}

.vl-modal-dialog {
  display: block;
  z-index: 41;
  width: 80rem;
}

.vl-modal {
  .vl-modal__backdrop {
    z-index: 40;
  }
  tbody {
    background-color:white;
  }
}

// A sub-item nr for a 2-digit itemnr (eg. '12b') demands extra padding
.vlc-agenda-items-sub-item__block-clickable, .vlc-agenda-items-sub-item__block-non-clickable {
  padding-left: 4.5rem;
}

// Avoid agenda item section headers being on top of modal backdrop
.vlc-panel-layout__agenda-items .vlc-list-section-header {
  z-index: 39;
}

